--- a/Submission/SportsInviter/GetVenueDetails.xaml
+++ b/Submission/SportsInviter/GetVenueDetails.xaml
@@ -5,11 +5,12 @@
     <x:Property Name="argVenueAddress" Type="OutArgument(x:String)" />
     <x:Property Name="argGmapLink" Type="OutArgument(x:String)" />
     <x:Property Name="argboolVenue" Type="OutArgument(x:Boolean)" />
+    <x:Property Name="argVenueCountryCode" Type="OutArgument(x:String)" />
   </x:Members>
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>770,1535</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>770,1635</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>GetVenueDetails_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="21">
@@ -61,7 +62,7 @@
       <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="GetVenueDetails" sap:VirtualizedContainerService.HintSize="730,1455" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="GetVenueDetails" sap:VirtualizedContainerService.HintSize="730,1555" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="dtVenue" />
     </Sequence.Variables>
@@ -72,21 +73,21 @@
     </sap:WorkflowViewStateService.ViewState>
     <ui:Comment sap:VirtualizedContainerService.HintSize="708,112" sap2010:WorkflowViewState.IdRef="Comment_1" Text="// &#xA;• Input: Venue name&#xA;• Steps: Use the venue name and find the venue address from Venues.xlsx&#xA;• Output: address, zip &amp; google map link&#xA;&#xA;" />
     <ui:ReadRange Range="{x:Null}" AddHeaders="True" DataTable="[dtVenue]" DisplayName="Read Range from VenueDetails.xlsx" sap:VirtualizedContainerService.HintSize="708,87" sap2010:WorkflowViewState.IdRef="ReadRange_1" SheetName="Sheet1" WorkbookPath="[environment.CurrentDirectory+&quot;\Data\Input\VenueDetails.xlsx&quot;]" />
-    <ui:ForEachRow CurrentIndex="{x:Null}" DataTable="[dtVenue]" DisplayName="For Each Row in venue data table" sap:VirtualizedContainerService.HintSize="708,1052" sap2010:WorkflowViewState.IdRef="ForEachRow_1">
+    <ui:ForEachRow CurrentIndex="{x:Null}" DataTable="[dtVenue]" DisplayName="For Each Row in venue data table" sap:VirtualizedContainerService.HintSize="708,1152" sap2010:WorkflowViewState.IdRef="ForEachRow_1">
       <ui:ForEachRow.Body>
         <ActivityAction x:TypeArguments="sd:DataRow">
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="sd:DataRow" Name="row" />
           </ActivityAction.Argument>
-          <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="678,904" sap2010:WorkflowViewState.IdRef="Sequence_2">
+          <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="678,1004" sap2010:WorkflowViewState.IdRef="Sequence_2">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <If Condition="[row(&quot;Ground Name&quot;).ToString.Equals(argVenueName)]" DisplayName="If ground name exists in venues.xlsx" sap:VirtualizedContainerService.HintSize="656,780" sap2010:WorkflowViewState.IdRef="If_1">
+            <If Condition="[row(&quot;Ground Name&quot;).ToString.Equals(argVenueName)]" DisplayName="If ground name exists in venues.xlsx" sap:VirtualizedContainerService.HintSize="656,880" sap2010:WorkflowViewState.IdRef="If_1">
               <If.Then>
-                <Sequence DisplayName="Get Venue zip, Address, gmap link" sap:VirtualizedContainerService.HintSize="531,632" sap2010:WorkflowViewState.IdRef="Sequence_3">
+                <Sequence DisplayName="Get Venue zip, Address, gmap link" sap:VirtualizedContainerService.HintSize="531,732" sap2010:WorkflowViewState.IdRef="Sequence_3">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -114,6 +115,14 @@
                     </Assign.To>
                     <Assign.Value>
                       <InArgument x:TypeArguments="x:String">[row("Google map link").ToString]</InArgument>
+                    </Assign.Value>
+                  </Assign>
+                  <Assign sap:VirtualizedContainerService.HintSize="509,60" sap2010:WorkflowViewState.IdRef="Assign_6">
+                    <Assign.To>
+                      <OutArgument x:TypeArguments="x:String">[argVenueCountryCode]</OutArgument>
+                    </Assign.To>
+                    <Assign.Value>
+                      <InArgument x:TypeArguments="x:String">[row("Country Code").ToString]</InArgument>
                     </Assign.Value>
                   </Assign>
                   <If Condition="[argVenueZip.Equals(&quot;&quot;) or argVenueAddress.Equals(&quot;&quot;)]" DisplayName="If zip and address is empty" sap:VirtualizedContainerService.HintSize="509,208" sap2010:WorkflowViewState.IdRef="If_2">
