--- a/Submission/SportsInviter/GetVenueDetails.xaml
+++ b/Submission/SportsInviter/GetVenueDetails.xaml
@@ -10,7 +10,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>770,1635</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1118,2106</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>GetVenueDetails_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="21">
@@ -62,7 +62,7 @@
       <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="GetVenueDetails" sap:VirtualizedContainerService.HintSize="730,1555" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="GetVenueDetails" sap:VirtualizedContainerService.HintSize="1078,2026" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="dtVenue" />
     </Sequence.Variables>
@@ -71,29 +71,31 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:Comment sap:VirtualizedContainerService.HintSize="708,112" sap2010:WorkflowViewState.IdRef="Comment_1" Text="// &#xA;• Input: Venue name&#xA;• Steps: Use the venue name and find the venue address from Venues.xlsx&#xA;• Output: address, zip &amp; google map link&#xA;&#xA;" />
-    <ui:ReadRange Range="{x:Null}" AddHeaders="True" DataTable="[dtVenue]" DisplayName="Read Range from VenueDetails.xlsx" sap:VirtualizedContainerService.HintSize="708,87" sap2010:WorkflowViewState.IdRef="ReadRange_1" SheetName="Sheet1" WorkbookPath="[environment.CurrentDirectory+&quot;\Data\Input\VenueDetails.xlsx&quot;]" />
-    <ui:ForEachRow CurrentIndex="{x:Null}" DataTable="[dtVenue]" DisplayName="For Each Row in venue data table" sap:VirtualizedContainerService.HintSize="708,1152" sap2010:WorkflowViewState.IdRef="ForEachRow_1">
+    <ui:Comment sap:VirtualizedContainerService.HintSize="1040,112" sap2010:WorkflowViewState.IdRef="Comment_1" Text="// &#xA;• Input: Venue name&#xA;• Steps: Use the venue name and find the venue address from Venues.xlsx&#xA;• Output: address, zip &amp; google map link&#xA;&#xA;" />
+    <ui:ReadRange Range="{x:Null}" AddHeaders="True" DataTable="[dtVenue]" DisplayName="Read Range from VenueDetails.xlsx" sap:VirtualizedContainerService.HintSize="1040,87" sap2010:WorkflowViewState.IdRef="ReadRange_1" SheetName="Sheet1" WorkbookPath="[environment.CurrentDirectory+&quot;\Data\Input\VenueDetails.xlsx&quot;]" />
+    <ui:ForEachRow CurrentIndex="{x:Null}" DataTable="[dtVenue]" DisplayName="For Each Row in venue data table" sap:VirtualizedContainerService.HintSize="1040,1655" sap2010:WorkflowViewState.IdRef="ForEachRow_1">
       <ui:ForEachRow.Body>
         <ActivityAction x:TypeArguments="sd:DataRow">
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="sd:DataRow" Name="row" />
           </ActivityAction.Argument>
-          <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="678,1004" sap2010:WorkflowViewState.IdRef="Sequence_2">
+          <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="994,1507" sap2010:WorkflowViewState.IdRef="Sequence_2">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <If Condition="[row(&quot;Ground Name&quot;).ToString.Equals(argVenueName)]" DisplayName="If ground name exists in venues.xlsx" sap:VirtualizedContainerService.HintSize="656,880" sap2010:WorkflowViewState.IdRef="If_1">
+            <ui:Comment sap:VirtualizedContainerService.HintSize="956,93" sap2010:WorkflowViewState.IdRef="Comment_2" Text="// Check if the venue name from the upcoming game details is available in the Venue.xlsx" />
+            <If Condition="[row(&quot;Ground Name&quot;).ToString.Equals(argVenueName)]" DisplayName="If ground name exists in venues.xlsx" sap:VirtualizedContainerService.HintSize="956,1282" sap2010:WorkflowViewState.IdRef="If_1">
               <If.Then>
-                <Sequence DisplayName="Get Venue zip, Address, gmap link" sap:VirtualizedContainerService.HintSize="531,732" sap2010:WorkflowViewState.IdRef="Sequence_3">
+                <Sequence DisplayName="Get Venue zip, Address, gmap link" sap:VirtualizedContainerService.HintSize="815,1134" sap2010:WorkflowViewState.IdRef="Sequence_3">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <Assign sap:VirtualizedContainerService.HintSize="509,60" sap2010:WorkflowViewState.IdRef="Assign_1">
+                  <ui:Comment sap:VirtualizedContainerService.HintSize="777,74" sap2010:WorkflowViewState.IdRef="Comment_3" Text="// If Venue exist then get the venue address, zip, country code and google map link" />
+                  <Assign sap:VirtualizedContainerService.HintSize="777,60" sap2010:WorkflowViewState.IdRef="Assign_1">
                     <Assign.To>
                       <OutArgument x:TypeArguments="x:String">[argVenueZip]</OutArgument>
                     </Assign.To>
@@ -101,7 +103,7 @@
                       <InArgument x:TypeArguments="x:String">[row("zip").ToString]</InArgument>
                     </Assign.Value>
                   </Assign>
-                  <Assign sap:VirtualizedContainerService.HintSize="509,60" sap2010:WorkflowViewState.IdRef="Assign_2">
+                  <Assign sap:VirtualizedContainerService.HintSize="777,60" sap2010:WorkflowViewState.IdRef="Assign_2">
                     <Assign.To>
                       <OutArgument x:TypeArguments="x:String">[argVenueAddress]</OutArgument>
                     </Assign.To>
@@ -109,7 +111,7 @@
                       <InArgument x:TypeArguments="x:String">[row("Address").ToString]</InArgument>
                     </Assign.Value>
                   </Assign>
-                  <Assign sap:VirtualizedContainerService.HintSize="509,60" sap2010:WorkflowViewState.IdRef="Assign_3">
+                  <Assign sap:VirtualizedContainerService.HintSize="777,60" sap2010:WorkflowViewState.IdRef="Assign_3">
                     <Assign.To>
                       <OutArgument x:TypeArguments="x:String">[argGmapLink]</OutArgument>
                     </Assign.To>
@@ -117,7 +119,7 @@
                       <InArgument x:TypeArguments="x:String">[row("Google map link").ToString]</InArgument>
                     </Assign.Value>
                   </Assign>
-                  <Assign sap:VirtualizedContainerService.HintSize="509,60" sap2010:WorkflowViewState.IdRef="Assign_6">
+                  <Assign sap:VirtualizedContainerService.HintSize="777,60" sap2010:WorkflowViewState.IdRef="Assign_6">
                     <Assign.To>
                       <OutArgument x:TypeArguments="x:String">[argVenueCountryCode]</OutArgument>
                     </Assign.To>
@@ -125,26 +127,43 @@
                       <InArgument x:TypeArguments="x:String">[row("Country Code").ToString]</InArgument>
                     </Assign.Value>
                   </Assign>
-                  <If Condition="[argVenueZip.Equals(&quot;&quot;) or argVenueAddress.Equals(&quot;&quot;)]" DisplayName="If zip and address is empty" sap:VirtualizedContainerService.HintSize="509,208" sap2010:WorkflowViewState.IdRef="If_2">
+                  <ui:Comment sap:VirtualizedContainerService.HintSize="777,74" sap2010:WorkflowViewState.IdRef="Comment_4" Text="// Check if Venue Zip or address values are empty" />
+                  <If Condition="[argVenueZip.Equals(&quot;&quot;) or argVenueAddress.Equals(&quot;&quot;)]" DisplayName="If zip and address is empty" sap:VirtualizedContainerService.HintSize="777,414" sap2010:WorkflowViewState.IdRef="If_2">
                     <If.Then>
-                      <Assign sap:VirtualizedContainerService.HintSize="242,60" sap2010:WorkflowViewState.IdRef="Assign_4">
-                        <Assign.To>
-                          <OutArgument x:TypeArguments="x:Boolean">[argboolVenue]</OutArgument>
-                        </Assign.To>
-                        <Assign.Value>
-                          <InArgument x:TypeArguments="x:Boolean">False</InArgument>
-                        </Assign.Value>
-                      </Assign>
+                      <Sequence DisplayName="Set Venue flag to True" sap:VirtualizedContainerService.HintSize="368,266" sap2010:WorkflowViewState.IdRef="Sequence_4">
+                        <sap:WorkflowViewStateService.ViewState>
+                          <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                          </scg:Dictionary>
+                        </sap:WorkflowViewStateService.ViewState>
+                        <ui:Comment sap:VirtualizedContainerService.HintSize="330,74" sap2010:WorkflowViewState.IdRef="Comment_5" Text="// If venue zip or address is empty then set this flag to false" />
+                        <Assign sap:VirtualizedContainerService.HintSize="330,60" sap2010:WorkflowViewState.IdRef="Assign_4">
+                          <Assign.To>
+                            <OutArgument x:TypeArguments="x:Boolean">[argboolVenue]</OutArgument>
+                          </Assign.To>
+                          <Assign.Value>
+                            <InArgument x:TypeArguments="x:Boolean">False</InArgument>
+                          </Assign.Value>
+                        </Assign>
+                      </Sequence>
                     </If.Then>
                     <If.Else>
-                      <Assign sap:VirtualizedContainerService.HintSize="242,60" sap2010:WorkflowViewState.IdRef="Assign_5">
-                        <Assign.To>
-                          <OutArgument x:TypeArguments="x:Boolean">[argboolVenue]</OutArgument>
-                        </Assign.To>
-                        <Assign.Value>
-                          <InArgument x:TypeArguments="x:Boolean">True</InArgument>
-                        </Assign.Value>
-                      </Assign>
+                      <Sequence DisplayName="Set Venue flag to true" sap:VirtualizedContainerService.HintSize="368,266" sap2010:WorkflowViewState.IdRef="Sequence_5">
+                        <sap:WorkflowViewStateService.ViewState>
+                          <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                          </scg:Dictionary>
+                        </sap:WorkflowViewStateService.ViewState>
+                        <ui:Comment sap:VirtualizedContainerService.HintSize="330,74" sap2010:WorkflowViewState.IdRef="Comment_6" Text="// If the Venue detail are available then set this flag to true" />
+                        <Assign sap:VirtualizedContainerService.HintSize="330,60" sap2010:WorkflowViewState.IdRef="Assign_5">
+                          <Assign.To>
+                            <OutArgument x:TypeArguments="x:Boolean">[argboolVenue]</OutArgument>
+                          </Assign.To>
+                          <Assign.Value>
+                            <InArgument x:TypeArguments="x:Boolean">True</InArgument>
+                          </Assign.Value>
+                        </Assign>
+                      </Sequence>
                     </If.Else>
                   </If>
                 </Sequence>
