--- a/Submission/SportsInviter/GoogleCalendarInvite.xaml
+++ b/Submission/SportsInviter/GoogleCalendarInvite.xaml
@@ -14,7 +14,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>587,1222</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>715,1258</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>GoogleCalendarInvite_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="21">
@@ -65,45 +65,46 @@
       <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="GoogleCalendarInvite" sap:VirtualizedContainerService.HintSize="547,1142" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="GoogleCalendarInvite" sap:VirtualizedContainerService.HintSize="675,1178" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:Comment sap:VirtualizedContainerService.HintSize="525,188" sap2010:WorkflowViewState.IdRef="Comment_1" Text="// &#xA;• Input: Invitees email id’s, Event Title , Event Description, Date, start and end time, location, Google API Key, Google client ID and client Secret&#xA;• Steps: Gsuite UiPath activity will use all the inputs to send out the Calendar invite and returns a confirmation in form of Event ID.&#xA;• Output: Google Calendar Event ID&#xA;" />
-    <uga:GSuiteApplicationScope KeyPath="{x:Null}" Password="{x:Null}" ServiceAccountEmail="{x:Null}" UserEmail="{x:Null}" ApiKey="[argGoogleAPIKey]" AuthenticationType="OAuthClientID" CredentialID="[argGoogleClientID]" CredentialSecret="[argGoogleClientSecret]" DisplayName="GSuite Application Scope" HasDomainWideAccesss="False" sap:VirtualizedContainerService.HintSize="525,790" sap2010:WorkflowViewState.IdRef="GSuiteApplicationScope_1" KeyType="JSON" Services="Calendar">
+    <ui:Comment sap:VirtualizedContainerService.HintSize="637,188" sap2010:WorkflowViewState.IdRef="Comment_1" Text="// &#xA;• Input: Invitees email id’s, Event Title , Event Description, Date, start and end time, location, Google API Key, Google client ID and client Secret&#xA;• Steps: Gsuite UiPath activity will use all the inputs to send out the Calendar invite and returns a confirmation in form of Event ID.&#xA;• Output: Google Calendar Event ID&#xA;" />
+    <uga:GSuiteApplicationScope KeyPath="{x:Null}" Password="{x:Null}" ServiceAccountEmail="{x:Null}" UserEmail="{x:Null}" ApiKey="[argGoogleAPIKey]" AuthenticationType="OAuthClientID" CredentialID="[argGoogleClientID]" CredentialSecret="[argGoogleClientSecret]" DisplayName="GSuite Application Scope" HasDomainWideAccesss="False" sap:VirtualizedContainerService.HintSize="637,858" sap2010:WorkflowViewState.IdRef="GSuiteApplicationScope_1" KeyType="JSON" Services="Calendar">
       <uga:GSuiteApplicationScope.Body>
         <ActivityAction x:TypeArguments="ug:SimpleObjectContainer">
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="ug:SimpleObjectContainer" Name="GSuiteScope" />
           </ActivityAction.Argument>
-          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="511,704" sap2010:WorkflowViewState.IdRef="Sequence_2">
+          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="607,772" sap2010:WorkflowViewState.IdRef="Sequence_2">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <uga:CreateEvent CalendarId="{x:Null}" EventUrl="{x:Null}" RecurringRule="{x:Null}" TimeZone="{x:Null}" AttendeeList="[argAttendees]" Description="[argEventDetails]" DisplayName="Create Event" EndTime="[argEndDateTime]" EventId="[argEventID]" sap:VirtualizedContainerService.HintSize="489,207" sap2010:WorkflowViewState.IdRef="CreateEvent_1" Location="[argLocation]" SendUpdates="ALL" StartTime="[argStartDateTime]" Status="CONFIRMED" Title="[argEventTitle]" Visibility="DEFAULT" />
-            <If Condition="[argEventID.Equals(&quot;&quot;)]" DisplayName="Check If calendar invite sent" sap:VirtualizedContainerService.HintSize="489,333" sap2010:WorkflowViewState.IdRef="If_1">
+            <uga:CreateEvent CalendarId="{x:Null}" EventUrl="{x:Null}" RecurringRule="{x:Null}" TimeZone="{x:Null}" AttendeeList="[argAttendees]" Description="[argEventDetails]" DisplayName="Create Event" EndTime="[argEndDateTime]" EventId="[argEventID]" sap:VirtualizedContainerService.HintSize="569,207" sap2010:WorkflowViewState.IdRef="CreateEvent_1" Location="[argLocation]" SendUpdates="ALL" StartTime="[argStartDateTime]" Status="CONFIRMED" Title="[argEventTitle]" Visibility="DEFAULT" />
+            <ui:Comment sap:VirtualizedContainerService.HintSize="569,93" sap2010:WorkflowViewState.IdRef="Comment_2" Text="// Check if the Event ID is not empty, Event id the confirmation for the Calendar invitation sent successfully." />
+            <If Condition="[argEventID.Equals(&quot;&quot;)]" DisplayName="Check If calendar invite sent" sap:VirtualizedContainerService.HintSize="569,300" sap2010:WorkflowViewState.IdRef="If_1">
               <If.Then>
-                <Sequence DisplayName="Calendar invite not sent Sequence" sap:VirtualizedContainerService.HintSize="232,185" sap2010:WorkflowViewState.IdRef="Sequence_3">
+                <Sequence DisplayName="Calendar invite not sent Sequence" sap:VirtualizedContainerService.HintSize="264,153" sap2010:WorkflowViewState.IdRef="Sequence_3">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="210,61" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="Calendar invite not sent" />
+                  <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="226,61" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="Calendar invite not sent" />
                 </Sequence>
               </If.Then>
               <If.Else>
-                <Sequence DisplayName="Clendar invite Sent Sequence" sap:VirtualizedContainerService.HintSize="232,185" sap2010:WorkflowViewState.IdRef="Sequence_4">
+                <Sequence DisplayName="Clendar invite Sent Sequence" sap:VirtualizedContainerService.HintSize="264,153" sap2010:WorkflowViewState.IdRef="Sequence_4">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="210,61" sap2010:WorkflowViewState.IdRef="WriteLine_2" Text="calendar invite sent" />
+                  <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="226,61" sap2010:WorkflowViewState.IdRef="WriteLine_2" Text="calendar invite sent" />
                 </Sequence>
               </If.Else>
             </If>
